--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,12 @@ h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
 idna==3.4
+iniconfig==2.0.0
 mysql-connector-python==8.1.0
+packaging==24.0
+pluggy==1.4.0
 protobuf==4.21.12
+pytest==8.1.1
 python-telegram-bot==20.4
 requests==2.31.0
 sniffio==1.3.0
