--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 anyio==3.7.1
+attrs==23.2.0
 beautifulsoup4==4.12.2
 bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
+frozenlist==1.4.1
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
-idna==3.7
+idna==3.4
 iniconfig==2.0.0
+multidict==6.0.5
 mysql-connector-python==8.1.0
 packaging==24.0
 pluggy==1.4.0
@@ -19,3 +24,4 @@ sniffio==1.3.0
 soupsieve==2.5
 tabulate==0.9.0
 urllib3==2.2.1
+yarl==1.9.4
