--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 .DS_Store
+.idea/
 # C extensions
 *.so
 *.log
@@ -56,7 +57,6 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -160,7 +160,6 @@ cython_debug/
 #.idea/
 
 # Log Files
-*.log
 *.logs
 
 # User-Defined Data Files
