--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohappyeyeballs==2.4.4
 aiohttp==3.10.11
 aiosignal==1.3.1
 anyio==3.7.1
@@ -16,12 +17,14 @@ multidict==6.0.5
 mysql-connector-python==9.1.0
 packaging==24.0
 pluggy==1.4.0
+propcache==0.2.1
 protobuf==4.21.12
 pytest==8.1.1
+python-decouple==3.8
 python-telegram-bot==20.4
 requests==2.32.2
 sniffio==1.3.0
 soupsieve==2.5
 tabulate==0.9.0
 urllib3==2.2.2
-yarl==1.9.4
+yarl==1.18.3
